src/parse/parser/snapshots/geam__parse__parser__tests__accept_case_alternative_patterns.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\npub fn either_zero(a, b) {\n  case a, b {\n    0, _ | _, 0 -> True\n    _, _ -> False\n  }\n}\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        Function(
            Function {
                location: SrcSpan {
                    start: 5,
                    end: 19,
                },
                body_start: Some(
                    26,
                ),
                end_position: 89,
                name: Some(
                    (
                        SrcSpan {
                            start: 8,
                            end: 19,
                        },
                        "either_zero",
                    ),
                ),
                arguments: [
                    Arg {
                        location: SrcSpan {
                            start: 20,
                            end: 21,
                        },
                        name: (
                            SrcSpan {
                                start: 20,
                                end: 21,
                            },
                            "a",
                        ),
                        annotation: None,
                        type_: (),
                    },
                    Arg {
                        location: SrcSpan {
                            start: 23,
                            end: 24,
                        },
                        name: (
                            SrcSpan {
                                start: 23,
                                end: 24,
                            },
                            "b",
                        ),
                        annotation: None,
                        type_: (),
                    },
                ],
                body: [
                    Expression(
                        Case {
                            location: SrcSpan {
                                start: 30,
                                end: 87,
                            },
                            subjects: [
                                Var {
                                    location: SrcSpan {
                                        start: 35,
                                        end: 36,
                                    },
                                    name: "a",
                                },
                                Var {
                                    location: SrcSpan {
                                        start: 38,
                                        end: 39,
                                    },
                                    name: "b",
                                },
                            ],
                            clauses: [
                                Clause {
                                    location: SrcSpan {
                                        start: 46,
                                        end: 65,
                                    },
                                    pattern: [
                                        Int {
                                            location: SrcSpan {
                                                start: 46,
                                                end: 47,
                                            },
                                            value: "0",
                                            int_value: 0,
                                        },
                                        Discard {
                                            name: "_",
                                            location: SrcSpan {
                                                start: 49,
                                                end: 50,
                                            },
                                            type_: (),
                                        },
                                    ],
                                    alternative_patterns: [
                                        [
                                            Discard {
                                                name: "_",
                                                location: SrcSpan {
                                                    start: 53,
                                                    end: 54,
                                                },
                                                type_: (),
                                            },
                                            Int {
                                                location: SrcSpan {
                                                    start: 56,
                                                    end: 57,
                                                },
                                                value: "0",
                                                int_value: 0,
                                            },
                                        ],
                                    ],
                                    guard: None,
                                    then: Var {
                                        location: SrcSpan {
                                            start: 61,
                                            end: 65,
                                        },
                                        name: "True",
                                    },
                                },
                                Clause {
                                    location: SrcSpan {
                                        start: 70,
                                        end: 83,
                                    },
                                    pattern: [
                                        Discard {
                                            name: "_",
                                            location: SrcSpan {
                                                start: 70,
                                                end: 71,
                                            },
                                            type_: (),
                                        },
                                        Discard {
                                            name: "_",
                                            location: SrcSpan {
                                                start: 73,
                                                end: 74,
                                            },
                                            type_: (),
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: Var {
                                        location: SrcSpan {
                                            start: 78,
                                            end: 83,
                                        },
                                        name: "False",
                                    },
                                },
                            ],
                        },
                    ),
                ],
                publicity: Public,
                return_annotation: None,
                return_type: (),
            },
        ),
    ],
}
