src/parse/parser/snapshots/geam__parse__parser__tests__accept_case_guard_syntax.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\npub fn compare(a, b) {\n  case a, b {\n    x, y if x == y -> True\n    _, _ -> False\n  }\n}\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        Function(
            Function {
                location: SrcSpan {
                    start: 5,
                    end: 15,
                },
                body_start: Some(
                    22,
                ),
                end_position: 88,
                name: Some(
                    (
                        SrcSpan {
                            start: 8,
                            end: 15,
                        },
                        "compare",
                    ),
                ),
                arguments: [
                    Arg {
                        location: SrcSpan {
                            start: 16,
                            end: 17,
                        },
                        name: (
                            SrcSpan {
                                start: 16,
                                end: 17,
                            },
                            "a",
                        ),
                        annotation: None,
                        type_: (),
                    },
                    Arg {
                        location: SrcSpan {
                            start: 19,
                            end: 20,
                        },
                        name: (
                            SrcSpan {
                                start: 19,
                                end: 20,
                            },
                            "b",
                        ),
                        annotation: None,
                        type_: (),
                    },
                ],
                body: [
                    Expression(
                        Case {
                            location: SrcSpan {
                                start: 26,
                                end: 86,
                            },
                            subjects: [
                                Var {
                                    location: SrcSpan {
                                        start: 31,
                                        end: 32,
                                    },
                                    name: "a",
                                },
                                Var {
                                    location: SrcSpan {
                                        start: 34,
                                        end: 35,
                                    },
                                    name: "b",
                                },
                            ],
                            clauses: [
                                Clause {
                                    location: SrcSpan {
                                        start: 42,
                                        end: 64,
                                    },
                                    pattern: [
                                        Variable {
                                            location: SrcSpan {
                                                start: 42,
                                                end: 43,
                                            },
                                            name: "x",
                                            type_: (),
                                        },
                                        Variable {
                                            location: SrcSpan {
                                                start: 45,
                                                end: 46,
                                            },
                                            name: "y",
                                            type_: (),
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: Some(
                                        ClauseGuard {
                                            location: SrcSpan {
                                                start: 50,
                                                end: 56,
                                            },
                                            expression: BinOp {
                                                location: SrcSpan {
                                                    start: 50,
                                                    end: 56,
                                                },
                                                operator: Eq,
                                                operator_start: 52,
                                                left: Var {
                                                    location: SrcSpan {
                                                        start: 50,
                                                        end: 51,
                                                    },
                                                    name: "x",
                                                },
                                                right: Var {
                                                    location: SrcSpan {
                                                        start: 55,
                                                        end: 56,
                                                    },
                                                    name: "y",
                                                },
                                            },
                                        },
                                    ),
                                    then: Var {
                                        location: SrcSpan {
                                            start: 60,
                                            end: 64,
                                        },
                                        name: "True",
                                    },
                                },
                                Clause {
                                    location: SrcSpan {
                                        start: 69,
                                        end: 82,
                                    },
                                    pattern: [
                                        Discard {
                                            name: "_",
                                            location: SrcSpan {
                                                start: 69,
                                                end: 70,
                                            },
                                            type_: (),
                                        },
                                        Discard {
                                            name: "_",
                                            location: SrcSpan {
                                                start: 72,
                                                end: 73,
                                            },
                                            type_: (),
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: Var {
                                        location: SrcSpan {
                                            start: 77,
                                            end: 82,
                                        },
                                        name: "False",
                                    },
                                },
                            ],
                        },
                    ),
                ],
                publicity: Public,
                return_annotation: None,
                return_type: (),
            },
        ),
    ],
}
