src/parse/parser/snapshots/geam__parse__parser__tests__accept_custom_type_and_constructor_pattern_case.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\npub type Option(a) {\n  Some(a)\n  None\n}\n\npub fn unwrap(option: Option(Int)) -> Int {\n  case option {\n    Some(value) -> value\n    None -> 0\n  }\n}\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        CustomType(
            CustomType {
                location: SrcSpan {
                    start: 5,
                    end: 40,
                },
                publicity: Public,
                name: (
                    SrcSpan {
                        start: 10,
                        end: 16,
                    },
                    "Option",
                ),
                parameters: [
                    (
                        SrcSpan {
                            start: 17,
                            end: 18,
                        },
                        "a",
                    ),
                ],
                constructors: [
                    RecordConstructor {
                        location: SrcSpan {
                            start: 24,
                            end: 31,
                        },
                        name: (
                            SrcSpan {
                                start: 24,
                                end: 28,
                            },
                            "Some",
                        ),
                        arguments: [
                            RecordConstructorArg {
                                location: SrcSpan {
                                    start: 29,
                                    end: 30,
                                },
                                label: None,
                                annotation: Var {
                                    location: SrcSpan {
                                        start: 29,
                                        end: 30,
                                    },
                                    name: "a",
                                },
                                type_: (),
                            },
                        ],
                    },
                    RecordConstructor {
                        location: SrcSpan {
                            start: 34,
                            end: 38,
                        },
                        name: (
                            SrcSpan {
                                start: 34,
                                end: 38,
                            },
                            "None",
                        ),
                        arguments: [],
                    },
                ],
                type_: (),
            },
        ),
        Function(
            Function {
                location: SrcSpan {
                    start: 46,
                    end: 55,
                },
                body_start: Some(
                    84,
                ),
                end_position: 146,
                name: Some(
                    (
                        SrcSpan {
                            start: 49,
                            end: 55,
                        },
                        "unwrap",
                    ),
                ),
                arguments: [
                    Arg {
                        location: SrcSpan {
                            start: 56,
                            end: 75,
                        },
                        name: (
                            SrcSpan {
                                start: 56,
                                end: 62,
                            },
                            "option",
                        ),
                        annotation: Some(
                            Constructor {
                                location: SrcSpan {
                                    start: 64,
                                    end: 75,
                                },
                                module: None,
                                name: (
                                    SrcSpan {
                                        start: 64,
                                        end: 70,
                                    },
                                    "Option",
                                ),
                                arguments: [
                                    Constructor {
                                        location: SrcSpan {
                                            start: 71,
                                            end: 74,
                                        },
                                        module: None,
                                        name: (
                                            SrcSpan {
                                                start: 71,
                                                end: 74,
                                            },
                                            "Int",
                                        ),
                                        arguments: [],
                                    },
                                ],
                            },
                        ),
                        type_: (),
                    },
                ],
                body: [
                    Expression(
                        Case {
                            location: SrcSpan {
                                start: 88,
                                end: 144,
                            },
                            subjects: [
                                Var {
                                    location: SrcSpan {
                                        start: 93,
                                        end: 99,
                                    },
                                    name: "option",
                                },
                            ],
                            clauses: [
                                Clause {
                                    location: SrcSpan {
                                        start: 106,
                                        end: 126,
                                    },
                                    pattern: [
                                        Constructor {
                                            location: SrcSpan {
                                                start: 106,
                                                end: 117,
                                            },
                                            name_location: SrcSpan {
                                                start: 106,
                                                end: 110,
                                            },
                                            name: "Some",
                                            arguments: [
                                                CallArg {
                                                    location: SrcSpan {
                                                        start: 111,
                                                        end: 116,
                                                    },
                                                    label: None,
                                                    value: Variable {
                                                        location: SrcSpan {
                                                            start: 111,
                                                            end: 116,
                                                        },
                                                        name: "value",
                                                        type_: (),
                                                    },
                                                },
                                            ],
                                            module: None,
                                            type_: (),
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: Var {
                                        location: SrcSpan {
                                            start: 121,
                                            end: 126,
                                        },
                                        name: "value",
                                    },
                                },
                                Clause {
                                    location: SrcSpan {
                                        start: 131,
                                        end: 140,
                                    },
                                    pattern: [
                                        Constructor {
                                            location: SrcSpan {
                                                start: 131,
                                                end: 135,
                                            },
                                            name_location: SrcSpan {
                                                start: 131,
                                                end: 135,
                                            },
                                            name: "None",
                                            arguments: [],
                                            module: None,
                                            type_: (),
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: Int {
                                        location: SrcSpan {
                                            start: 139,
                                            end: 140,
                                        },
                                        value: "0",
                                        int_value: 0,
                                    },
                                },
                            ],
                        },
                    ),
                ],
                publicity: Public,
                return_annotation: Some(
                    Constructor {
                        location: SrcSpan {
                            start: 80,
                            end: 83,
                        },
                        module: None,
                        name: (
                            SrcSpan {
                                start: 80,
                                end: 83,
                            },
                            "Int",
                        ),
                        arguments: [],
                    },
                ),
                return_type: (),
            },
        ),
    ],
}
