src/parse/parser/snapshots/geam__parse__parser__tests__accept_import_alias_and_type_shapes.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\nimport gleam/io as logger\n\npub type Handler {\n  Handler(\n    callback: fn(Int, #(String, Int)) -> result.Result(Int, Error),\n  )\n}\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        Import(
            Import {
                location: SrcSpan {
                    start: 1,
                    end: 26,
                },
                module: "gleam/io",
                alias: Some(
                    (
                        SrcSpan {
                            start: 20,
                            end: 26,
                        },
                        "logger",
                    ),
                ),
            },
        ),
        CustomType(
            CustomType {
                location: SrcSpan {
                    start: 32,
                    end: 131,
                },
                publicity: Public,
                name: (
                    SrcSpan {
                        start: 37,
                        end: 44,
                    },
                    "Handler",
                ),
                parameters: [],
                constructors: [
                    RecordConstructor {
                        location: SrcSpan {
                            start: 49,
                            end: 129,
                        },
                        name: (
                            SrcSpan {
                                start: 49,
                                end: 56,
                            },
                            "Handler",
                        ),
                        arguments: [
                            RecordConstructorArg {
                                location: SrcSpan {
                                    start: 62,
                                    end: 124,
                                },
                                label: Some(
                                    (
                                        SrcSpan {
                                            start: 62,
                                            end: 70,
                                        },
                                        "callback",
                                    ),
                                ),
                                annotation: Fn {
                                    location: SrcSpan {
                                        start: 72,
                                        end: 124,
                                    },
                                    arguments: [
                                        Constructor {
                                            location: SrcSpan {
                                                start: 75,
                                                end: 78,
                                            },
                                            module: None,
                                            name: (
                                                SrcSpan {
                                                    start: 75,
                                                    end: 78,
                                                },
                                                "Int",
                                            ),
                                            arguments: [],
                                        },
                                        Tuple {
                                            location: SrcSpan {
                                                start: 80,
                                                end: 94,
                                            },
                                            elements: [
                                                Constructor {
                                                    location: SrcSpan {
                                                        start: 82,
                                                        end: 88,
                                                    },
                                                    module: None,
                                                    name: (
                                                        SrcSpan {
                                                            start: 82,
                                                            end: 88,
                                                        },
                                                        "String",
                                                    ),
                                                    arguments: [],
                                                },
                                                Constructor {
                                                    location: SrcSpan {
                                                        start: 90,
                                                        end: 93,
                                                    },
                                                    module: None,
                                                    name: (
                                                        SrcSpan {
                                                            start: 90,
                                                            end: 93,
                                                        },
                                                        "Int",
                                                    ),
                                                    arguments: [],
                                                },
                                            ],
                                        },
                                    ],
                                    return_: Constructor {
                                        location: SrcSpan {
                                            start: 99,
                                            end: 124,
                                        },
                                        module: Some(
                                            (
                                                "result",
                                                SrcSpan {
                                                    start: 99,
                                                    end: 105,
                                                },
                                            ),
                                        ),
                                        name: (
                                            SrcSpan {
                                                start: 106,
                                                end: 112,
                                            },
                                            "Result",
                                        ),
                                        arguments: [
                                            Constructor {
                                                location: SrcSpan {
                                                    start: 113,
                                                    end: 116,
                                                },
                                                module: None,
                                                name: (
                                                    SrcSpan {
                                                        start: 113,
                                                        end: 116,
                                                    },
                                                    "Int",
                                                ),
                                                arguments: [],
                                            },
                                            Constructor {
                                                location: SrcSpan {
                                                    start: 118,
                                                    end: 123,
                                                },
                                                module: None,
                                                name: (
                                                    SrcSpan {
                                                        start: 118,
                                                        end: 123,
                                                    },
                                                    "Error",
                                                ),
                                                arguments: [],
                                            },
                                        ],
                                    },
                                },
                                type_: (),
                            },
                        ],
                    },
                ],
                type_: (),
            },
        ),
    ],
}
