src/parse/parser/snapshots/geam__parse__parser__tests__accept_import_function_call.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\nimport gleam/io\n\npub fn main() {\n  io.println(\"hello\")\n}\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        Import(
            Import {
                location: SrcSpan {
                    start: 1,
                    end: 16,
                },
                module: "gleam/io",
                alias: None,
            },
        ),
        Function(
            Function {
                location: SrcSpan {
                    start: 22,
                    end: 29,
                },
                body_start: Some(
                    32,
                ),
                end_position: 57,
                name: Some(
                    (
                        SrcSpan {
                            start: 25,
                            end: 29,
                        },
                        "main",
                    ),
                ),
                arguments: [],
                body: [
                    Expression(
                        Call {
                            location: SrcSpan {
                                start: 36,
                                end: 55,
                            },
                            fun: FieldAccess {
                                location: SrcSpan {
                                    start: 36,
                                    end: 46,
                                },
                                label_location: SrcSpan {
                                    start: 39,
                                    end: 46,
                                },
                                label: "println",
                                container: Var {
                                    location: SrcSpan {
                                        start: 36,
                                        end: 38,
                                    },
                                    name: "io",
                                },
                            },
                            arguments: [
                                CallArg {
                                    location: SrcSpan {
                                        start: 47,
                                        end: 54,
                                    },
                                    label: None,
                                    value: String {
                                        location: SrcSpan {
                                            start: 47,
                                            end: 54,
                                        },
                                        value: "hello",
                                    },
                                },
                            ],
                            open_parenthesis: 46,
                        },
                    ),
                ],
                publicity: Public,
                return_annotation: None,
                return_type: (),
            },
        ),
    ],
}
